# cuda_gemm_benchmark

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  cuda_benchmark.cc
benchmarks/MatrixMulCUDA0/: naive.cc  naive.cu  naive.cuh
benchmarks/MatrixMulCUDA1/: blocker.cc  blocker.cu  blocker.cuh
benchmarks/MatrixMulCUDA10/: yzaiustc.cc  yzaiustc.cu  yzaiustc.cuh
benchmarks/MatrixMulCUDA11/: yhs.cc  yhs.cu  yhs.cuh
benchmarks/MatrixMulCUDA12/: czn.cc  czn.cu  czn.cuh
benchmarks/MatrixMulCUDA13/: common.h  czn_k16.cc  czn_k16.cu  czn_k16.cuh  gemm_base.h  gemm_impl.h  gemm_kernel.h  global_loader.h  virtual_kernel.h  warp_iterator.h
benchmarks/MatrixMulCUDA2/: strider.cc  strider.cu  strider.cuh
benchmarks/MatrixMulCUDA3/: aligner.cc  aligner.cu  aligner.cuh
benchmarks/MatrixMulCUDA4/: doubleloader.cc  doubleloader.cu  doubleloader.cuh  multiloader.cc  multiloader.cu  multiloader.cuh
benchmarks/MatrixMulCUDA5/: bankconflictavoider.cc  bankconflictavoider.cu  bankconflictavoider.cuh
benchmarks/MatrixMulCUDA6/: pingpangbuffer.cc  pingpangbuffer.cu  pingpangbuffer.cuh  pingpongbuffer.cc  pingpongbuffer.cu  pingpongbuffer.cuh
benchmarks/MatrixMulCUDA7/: sgemm128.cc  sgemm128.cu  sgemm128.cuh
benchmarks/MatrixMulCUDA8/: dense.cc  dense.cu  dense.cuh
benchmarks/MatrixMulCUDA9/: cublas.cc  cublas.cu  cublas.cuh
benchmarks/baseline/: baseline.cc  baseline.cu  baseline.cuh
benchmarks/bm_base/: CMakeLists.txt  basegemm.h
benchmarks/bm_lib/: CMakeLists.txt  basegemm.cpp  basegemm.h  benchmark_entry.h  utils.cc  utils.cu  utils.h
benchmarks/completely_unroll/: completely_unroll.cc  completely_unroll.cu  completely_unroll.cuh
benchmarks/define_extend/: define_extend.cc  define_extend.cu  define_extend.cuh
benchmarks/fix_block_size/: fix_block_size.cc  fix_block_size.cu  fix_block_size.cuh
benchmarks/interleave/: interleave.cc  interleave.cu
benchmarks/outer_memory/: outer_memory.cc  outer_memory.cu  outer_memory.cuh
benchmarks/stride/: stride.cc  stride.cu  stride.cuh
benchmarks/unroll/: unroll.cc  unroll.cu  unroll.cuh
script/: pre-commit.sh
